--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     position:absolute;
     inset:0;
     border-radius:18px;
-    padding:3px; /* thickness of glowing border */
+    padding:3px; /* glowing border thickness */
     background: linear-gradient(270deg, var(--orange), var(--yellow), var(--orange));
     background-size: 400% 400%;
     animation: glowShift 8s ease infinite;
@@ -203,7 +203,7 @@
         <li>Never share your password — not even with IT!</li>
       </ul>
 
-      <a class="cta" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">
+      <a class="cta" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank" rel="noopener noreferrer">
         Back to “Safety”
       </a>
 
