--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     text-align:center;
     box-shadow: 0 0 20px rgba(255,106,0,.3);
     animation: float 6s ease-in-out infinite;
+    isolation:isolate; /* keep pseudo-elements behind content */
   }
   .card::before {
     content:"";
@@ -50,8 +51,9 @@
     background-size: 400% 400%;
     animation: glowShift 8s ease infinite;
     -webkit-mask:linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    -webkit-mask-composite:xor;
-            mask-composite:exclude;
+    -webkit-mask-composite:xor; mask-composite:exclude;
+    pointer-events: none; /* <<< allow clicks to pass through */
+    z-index: 0;
   }
   @keyframes float {
     0%,100% {transform:translateY(0);}
@@ -70,6 +72,7 @@
     color: var(--orange);
     text-shadow: 0 0 10px #ff3d00, 0 0 20px #ff3d00;
     animation:flicker 3.5s infinite;
+    position: relative; z-index: 1;
   }
   @keyframes flicker {
     0%,18%,22%,25%,53%,57%,100% {opacity:1;}
@@ -80,6 +83,7 @@
     color:var(--yellow);
     margin-top:1.5rem;
     font-size:1.2rem;
+    position: relative; z-index: 1;
   }
 
   .lesson {
@@ -90,6 +94,7 @@
     border-radius:10px;
     font-weight:bold;
     box-shadow:0 8px 24px rgba(255,106,0,.25);
+    position: relative; z-index: 1;
   }
 
   ul {
@@ -97,6 +102,7 @@
     max-width:500px;
     margin:1rem auto;
     padding-left:1rem;
+    position: relative; z-index: 1;
   }
   li::marker {content:"🎃 ";}
 
@@ -110,6 +116,7 @@
     border-radius:12px;
     font-weight:bold;
     animation:pulse 2s ease-in-out infinite;
+    position: relative; z-index: 1; /* <<< make sure it’s above everything */
   }
   @keyframes pulse {
     0%,100% {box-shadow:0 0 0 0 rgba(255,106,0,.45);}
@@ -120,6 +127,7 @@
     margin-top:1.5rem;
     color:var(--muted);
     font-size:.95rem;
+    position: relative; z-index: 1;
   }
 
   /* Bats */
@@ -135,7 +143,7 @@
       linear-gradient(#000 0 0) center / 34px 6px no-repeat;
     animation: fly 18s linear infinite, flap .8s ease-in-out infinite;
     opacity:.85;
-    pointer-events:none;
+    pointer-events:none; /* don't block clicks */
   }
   .bat.b2 {top:35%; animation-duration:22s;}
   .bat.b3 {top:50%; animation-duration:16s;}
@@ -146,6 +154,7 @@
   .spider {
     position:fixed; left:85%; top:-140px; width:22px; height:22px;
     animation: drop 7s ease-in-out 1.5s infinite;
+    pointer-events:none; /* don't block clicks */
   }
   .thread {
     position:absolute; left:50%; top:-220px; width:2px; height:240px; transform:translateX(-50%);
